# py-virion-data

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: hatch_test.yaml  release.yaml
src/py_virion_data/: __about__.py  deposit.py  get_json.py  sanitize_id.py
tests/: __init__.py  test.py  test_deposit.py
