[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-virion-data"
dynamic = ["version"]
description = 'Consistent and ergonomic methods for accessing versioned Virion data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "collinschwantes", email = "collin@viralemergence.org" },
  {email = "collin.schwantes@yale.edu"},
  { name = "ricardorivero", email = "rrh9619@gmail.com"},
  { email = "ricardo.rivero@wsu.edu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests",
  "fs",
  "pandas",
]

[project.urls]
Documentation = "https://github.com/viralemergence/py-virion-data#readme"
Issues = "https://github.com/viralemergence/py-virion-data/issues"
Source = "https://github.com/viralemergence/py-virion-data"

[tool.hatch.version]
path = "src/py_virion_data/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_virion_data tests}"

[tool.coverage.run]
source_pkgs = ["py_virion_data", "tests"]
branch = true
parallel = true
omit = [
  "src/py_virion_data/__about__.py",
]

[tool.coverage.paths]
py_virion_data = ["src/py_virion_data", "*/py-virion-data/src/py_virion_data"]
tests = ["tests", "*/py-virion-data/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
